[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.11"
pip-tools = "^6.10.0"
pre-commit = "^2.20.0"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
